# rust-vcpu

./: .taplo.toml  Cargo.toml  Makefile  README.md  rustfmt.toml
benchmark/: Cargo.toml
benchmark/benches/: benchmark.rs
compiler/: Cargo.toml
compiler/src/: builder.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs
compiler/src/test/: and.rs  array.S  array.rs  cmp.rs  fibonacci.S  fibonacci.rs  imul.rs  jg.rs  jle.rs  jz.rs  lexer.rs  mod.rs  mov.rs  offsetof.rs  or.rs  rc4.S  rc4.rs  rc4_test_vectors.rs  test.rs  xor.rs
vm/: Cargo.toml
vm/src/: alu.rs  emulator.rs  error.rs  exception.rs  isa.rs  lib.rs  ram.rs
www/: index.html  package-lock.json  package.json  tailwind.config.ts
www/src/: App.tsx  index.css  prismjs-components.d.ts
www/wasm/: Cargo.toml
www/wasm/src/: lib.rs
