[package]
name              = "benchmark"
version           = "0.1.0"
publish.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bench]]
name    = "benchmark"
harness = false

[dev-dependencies]
criterion = "0.5.1"

[dependencies]
vm       = { path = "../vm" }
compiler = { path = "../compiler" }
