[package]
name              = "wasm"
version           = "0.1.0"
publish.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
once_cell    = "1.20.3"
wasm-bindgen = "0.2.100"
vm           = { path = "../../vm", features = [] }
compiler     = { path = "../../compiler" }
